Fixed Shift in Nav Item

--- a/themes/vrctheme/css/main.css
+++ b/themes/vrctheme/css/main.css
@@ -1,7 +1,7 @@
 header {
     background: #F5F5F5;
     width: 100%;
-    height: 50px;
+    height: 60px;
     box-shadow: 2px 2px 2px #DEDCDC;
 }
 
@@ -28,6 +28,7 @@ header .main-menu li a {
     padding: .25rem 1rem;
     color: #707070;
     text-decoration: none;
+    border-bottom: solid transparent;
 }
 
 header .main-menu li a:hover{
